--- a/src/ProjectPage.scss
+++ b/src/ProjectPage.scss
@@ -51,7 +51,9 @@
     }
 
     .carousel__image__description {
-      font-size: 0.5em;
+      font-size: 0.7em;
+      font-style: italic;
+
     }
   }
 }
